--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta content="./todo.png" itemprop="image"> 
+        <link rel="icon" type="image/png" href="favicon.png" />
     </head>
     <body>
         <div id="root">Not Working</div>
